more stuff deprecated since java 9